SaranjeetKaur published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2022-10-12}
+\date{2022-10-14}
 
 \begin{document}
 \maketitle
@@ -508,7 +508,7 @@ If you would like to see how bugs are reviewed on Bugzilla, \href{https://bugs.r
 
 \textbf{Note}:
 
-There is a \texttt{\#bugreports-for-review} channel on the \href{https://r-contributors.slack.com/}{R Contributors slack} where you can share your bug report(s) for review/feedback before submitting to Bugzilla. This can help with checking that it really is a bug, that you have included the important information and excluded redundant information.
+There is a \texttt{\#bug-reporting} channel on the \href{https://r-contributors.slack.com/}{R Contributors slack} where you can share your bug report(s) for review/feedback before submitting to Bugzilla. This can help with checking that it really is a bug, that you have included the important information and excluded redundant information.
 
 \hypertarget{see-also-2}{%
 \section{See also}\label{see-also-2}}
