--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2022-10-14}
+\date{2022-10-20}
 
 \begin{document}
 \maketitle
@@ -126,15 +126,17 @@
 \setcounter{tocdepth}{1}
 \tableofcontents
 }
-\hypertarget{section}{%
-\chapter*{}\label{section}}
-\addcontentsline{toc}{chapter}{}
+\hypertarget{acknowledgement}{%
+\chapter{Acknowledgement}\label{acknowledgement}}
 
-Initial chapters of this guide were developed by Saranjeet Kaur Bhogal, in a project funded by the R Foundation, mentored by Heather Turner and Michael Lawrence. It draws on documentation and articles written by the R Core Team.
+This guide draws on documentation and articles written by the R Core Team.
+Initial chapters of the guide were developed by Saranjeet Kaur Bhogal, in a project funded by the R Foundation, mentored by Heather Turner and Michael Lawrence. This initial version was upgraded in a \href{https://github.com/rstats-gsod/gsod2022/wiki/GSOD-2022-Proposal}{Google Season of Docs 2022} project with Saranjeet Kaur Bhogal and Lluís Revilla Sancho working as technical writers managed by Nicolas Bennett and overseen by a \href{https://github.com/rstats-gsod/gsod2022/wiki/GSOD-2022-Proposal\#steering-committee}{Steering Committee} including representatives from R Core and the wider R community.
 
-This guide has benefited from contributions and reviews by the following (names are in alphabetical order):
+This guide has benefited and continues to be benefit from varied contributions by several \href{https://github.com/r-devel/rdevguide\#contributors-}{contributors}.
 
-Bettina Gruen, Carol Willing, Gabriel Becker, Kara Woo, Lluís Revilla Sancho, Maya Gans, Michael Chirico, Mine Cetinkaya-Rundel, Toby Dylan Hocking.
+\href{https://creativecommons.org/licenses/by/4.0/}{\includegraphics{img/ccby.png}}
+
+This project is licensed under a \href{https://creativecommons.org/licenses/by/4.0/}{Creative Commons Attribution 4.0 International (CC BY 4.0)}. Some pages may contain materials that are subject to copyright, in which case you will see the copyright notice.
 
 \hypertarget{introduction}{%
 \chapter{Introduction}\label{introduction}}
