--- a/07-documenting_R.Rmd
+++ b/07-documenting_R.Rmd
@@ -2,7 +2,7 @@
 
 The R language has a substantial body of documentation, much of which is contributed by various authors. The help files for R functions are written in 'R documentation' (.Rd) file format. It is a simple markup language with close resemblance to LaTeX. The .Rd file format can be further processed into a variety of formats, including LaTeX, HTML, and plain text.
 
-This chapter describes the styleguide for R's documentation, how to document for R, report and review bugs (and suggest corrections for them) in the existing documentation. If you are interested in contributing to R's documentation, your contributions are more than welcome. 
+This chapter describes the style guide for R's documentation, how to document for R, report and review bugs (and suggest corrections for them) in the existing documentation. If you are interested in contributing to R's documentation, your contributions are more than welcome. 
 
 ## Introduction
 
@@ -15,6 +15,8 @@ This chapter is aimed at authors and potential authors of documentation for R. M
 ## Guidelines for writing the system help files (in .Rd format)
 
 Following are the suggested guidelines while creating the system help files in the .Rd format. A example of the .Rd format is available for [mean.Rd](https://svn.r-project.org/R/trunk/src/library/base/man/mean.Rd). These are intended for writing the core documentations but may also be useful for package writers. Extensive details of writing R documentation files can be found [here](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Writing-R-documentation-files).
+
+Note: The R package [roxygen2](https://roxygen2.r-lib.org/) helps with creating the .Rd files. However, this guide focuses on .Rd files only because the manual pages for the base distribution are written directly as .Rd files.
 
 There are three main parts of an .Rd file:
 
@@ -94,7 +96,7 @@ The Developer’s Guide (what you are reading now) uses the same process as the 
 
 Our dev guide workflow uses continuous integration and deployment so changes to the dev guide are normally published when the pull request is merged. [How to contribute to this guide from the introduction.](#how-to-contribute-to-this-guide)
 
-## Instructions for reporting the CRAN policy bugs -- discussion in slack (random channel)
+## Instructions for reporting issues on the CRAN web page
 
 If you find some typo or problem on [CRAN](https://cran.r-project.org) after checking the problem or typo you can write a polite email to `cran-sysadmin@r-project.org` and one of the R-core members working with CRAN. You'll probably get a prompt reply about how the issue is going to be fixed.
 
@@ -105,5 +107,5 @@ There is a `#core-documentation` channel on the [R Contributors slack](https://r
 ## See also
 
 1. [Writing R documentation files](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Writing-R-documentation-files)
-2. [R manuals](https://cran.r-project.org/manuals.html): These are a part of the [R sources](https://github.com/r-devel/r-svn/tree/master/doc/manual). Hence, bug reports/patches can also be submitted via Bugzilla, e.g. https://bugs.r-project.org/bugzilla/show_bug.cgi?id=15221. Note that they are typically referred to by their file names "R-admin", "R-exts" etc. The manuals are written in [Texinfo](https://www.gnu.org/software/texinfo/) (file extension `.texi`). The manual should be referred to for [how to mark up text](https://www.gnu.org/software/texinfo/manual/texinfo/texinfo.html). 
-R-admin contains information on how to [build the manuals](https://cran.r-project.org/doc/manuals/r-release/R-admin.html#Making-the-manuals) - it would be a good idea to check the manuals build if you are providing a patch. But simple suggestions could be made by describing the change or providing suggested `.texi` marked-up text directly, e.g. https://bugs.r-project.org/bugzilla/show_bug.cgi?id=15193.
+2. [R manuals](https://cran.r-project.org/manuals.html): These are a part of the [R sources](https://svn.r-project.org/R/trunk/doc/manual/) (a [GitHub mirror](https://github.com/r-devel/r-svn/tree/master/doc/manual) is also available). Hence, bug reports/patches can also be submitted via Bugzilla, e.g. [Bug 15221 - R-admin/'Installing R under Windows': Missing argument name](https://bugs.r-project.org/bugzilla/show_bug.cgi?id=15221). Note that they are typically referred to by their file names "R-admin", "R-exts" etc. The manuals are written in [Texinfo](https://www.gnu.org/software/texinfo/) (file extension `.texi`). The manual should be referred to for [how to mark up text](https://www.gnu.org/software/texinfo/manual/texinfo/texinfo.html). 
+R-admin contains information on how to [build the manuals](https://cran.r-project.org/doc/manuals/r-release/R-admin.html#Making-the-manuals) - it would be a good idea to check the manuals build if you are providing a patch. But simple suggestions could be made by describing the change or providing suggested `.texi` marked-up text directly, e.g. [Bug 15193 - Outdated / misleading information in R-exts](https://bugs.r-project.org/bugzilla/show_bug.cgi?id=15193).
