--- a/02-getting_started.Rmd
+++ b/02-getting_started.Rmd
@@ -49,11 +49,11 @@ In Ubuntu you can use :
 sudo apt-get install -y \
       bash-completion \
       bison \
-      debhelper-compat (= 11) \
+      debhelper-compat \
       default-jdk \
-      g++ (>= 4:4.9.2-2) \
-      gcc (>= 4:4.9.2-2) \
-      gfortran (>= 4:4.9.2-2) \
+      g++ \
+      gcc \
+      gfortran \
       groff-base \
       libblas-dev \
       libbz2-dev \
@@ -74,7 +74,7 @@ sudo apt-get install -y \
       libxt-dev \
       mpack \
       tcl8.6-dev \
-      texinfo (>= 4.1-2) \
+      texinfo \
       texlive-base \
       texlive-extra-utils \
       texlive-fonts-extra \
@@ -89,8 +89,7 @@ sudo apt-get install -y \
       xdg-utils \
       xfonts-base \
       xvfb \
-      zlib1g-dev
-      zstd
+      zlib1g-dev 
 ```
 
 ### Windows
