hturner published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -1235,8 +1235,8 @@ There is a \texttt{\#core-documentation} channel on the \href{https://r-contribu
   \href{https://cran.r-project.org/doc/manuals/r-release/R-exts.html\#Writing-R-documentation-files}{Writing R documentation files}
 \end{enumerate}
 
-\hypertarget{translations}{%
-\chapter{Translations}\label{translations}}
+\hypertarget{message-translations}{%
+\chapter{Message Translations}\label{message-translations}}
 
 This chapter covers internationalization in R, i.e., the display of messages in languages other than English. All
 output in R (such as messages emitted by \texttt{stop()}, \texttt{warning()}, or \texttt{message()}) is eligible for translation, as
