--- a/index.Rmd
+++ b/index.Rmd
@@ -16,9 +16,10 @@ description: "A guide to R development."
 ---
 
 
-# Acknowledgement
+# Acknowledgement {-}
 
-This guide draws on documentation and articles written by the R Core Team. 
+This guide draws on documentation and articles written by the R Core Team. The first version of the guide was heavily influence by the [Python Developer's Guide](https://devguide.python.org/).
+
 Initial chapters of the guide were developed by Saranjeet Kaur Bhogal, in a project funded by the R Foundation, mentored by Heather Turner and Michael Lawrence. This initial version was upgraded in a [Google Season of Docs 2022](https://github.com/rstats-gsod/gsod2022/wiki/GSOD-2022-Proposal) project with Saranjeet Kaur Bhogal and Lluís Revilla Sancho working as technical writers managed by Nicolas Bennett and overseen by a [Steering Committee](https://github.com/rstats-gsod/gsod2022/wiki/GSOD-2022-Proposal#steering-committee) including representatives from R Core and the wider R community.
 
 This guide has benefited and continues to benefit from varied contributions by several [contributors](https://github.com/r-devel/rdevguide#contributors-). 
